# scanhub_mri_device_simulator

./: .gitignore  AcquisitionEvent.py  LICENSE  README.md  README.rst  __init__.py  acquisition_control.py  acquisitioncontrol.py  image_manipulators.py  image_provider.py  imagemanipulators.py  imageprovider.py  logging.conf  main.py  main.pyproject  main.qml  pyproject.toml  requirements.txt  requirements_dev.txt  scanhub-mri-device-simulator.pyproject  scanhub_mri_device_simulator.pyproject  simulation_app.py  simulation_view.py  simulationapp.py
.github/workflows/: static-tests.yml
data/: kspace.npy
ressources/data/: 244000-1-1.dcm
tests/: test_run.py
views/: ConnectionView.qml  KSpaceParameterView.qml  view.qml
