[tool.poetry]
name = "scanhub-mri-device-simulator"
version = "0.0.1"
description = "ScanHub MRI Device Simulator is a Python package for simulating MRI devices. It is part of the ScanHub project."
authors = ["BRAIN-LINK UG (haftungsbeschraenkt) <info@brain-link.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.25.0"
pillow = "^10.0.0"
pydicom = "^2.4.1"
requests = "^2.31.0"
cffi = "^1.15.1"
scanhub = "0.0.4.dev4"
pyside6 = "^6.5.2"
mypy = "^1.6.0"
flake8 = "^6.1.0"
types-requests = "^2.31.0.9"
types-pillow = "^10.0.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
mypy = "*"
flake8 = "*"
Flake8-pyproject = "*"  # flake8 by deefault cannot be configured via this toml file, this package allows the configuration
isort = "*"
autopep8 = "*"
pydocstyle = "*"
pylint = "*"
poethepoet = "^0.20.0"
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
coverage = "*"
codecov = "*"
pytest = "*"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
sphinx_rtd_theme = "*"

[tool.pydocstyle]
convention = "numpy"

[tool.isort]
line_length = 120

[tool.black]
line-length = 120

[tool.pylint]
py-version = "3.10"
max-attributes = 20
max-line-length = 120
extension-pkg-allow-list = ["pydantic"]
disable = ["too-few-public-methods"]    # suppress warning at pydantic BaseModel and sqlalchemy ORM model

[tool.flake8]
max-line-length = 120

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

[tool.poe.tasks]
lint.sequence = ["isort", "black", "pylint", "flake8", "mypy", "pydocstyle"]
lint.ignore_fail = "return_non_zero"

    [tool.poe.tasks.isort]
    help = "Run isort"
    cmd  = "isort"

    [tool.poe.tasks.black]
    help = "Run black"
    cmd  = "black"

    [tool.poe.tasks.pylint]
    help = "Run pylint"
    cmd  = "pylint"

    [tool.poe.tasks.mypy]
    help = "Run mypy"
    cmd  = "mypy ."

    [tool.poe.tasks.flake8]
    help = "Run flake8"
    cmd  = "flake8"

    [tool.poe.tasks.pydocstyle]
    help = "Run pydocstyle"
    cmd  = "pydocstyle"
